syntax = "proto3";

option java_multiple_files = true;
option java_package = "vivaz.api";
option java_outer_classname = "CacheBuffer";

package cachebuffer;

service CacheBuffer{
  rpc ConsultaCache(KeysRequest) returns ( stream ValueReponse);
  rpc GravarCache(KeyValueToPut) returns (CreationStatus);
}
message KeysRequest{
  string key = 1;
}

message ValueReponse{
  int64 init = 1;
  int64 end= 2;
}

message KeyValueToPut{
    int64 init = 2;
    int64 end= 3;
    string hash = 5;
}

message CreationStatus{
  string status = 3;
  string hash = 4;
}