syntax = "proto3";
package entrybuffer;

service EntryBuffer{
  rpc ListaHorariosDisponiveis(RangeRequest) returns ( stream RangeReponse);
  rpc AgendarHorario( SchedullerRequest) returns (  SchedullerReponse);
}

message RangeRequest{
  string mes = 1;
  string ano = 2;
}

message RangeReponse{
  int64 init = 1;
  int64 end= 2;
}

message SchedullerRequest{
  int64 init = 1;
  int64 end= 2;
  string hash = 3;
}

message SchedullerReponse{
  string status = 1;
  string hash = 2;
}